production/frontend-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: prod
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: crudfrontend
          image: "omarvides/"
          ports:
            - name: http
              containerPort: 80
