production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main
  namespace: prod
  annotations:
    kubernetes.io/ingress.global-static-ip-name: crud-prod
spec:
  rules:
  - host: mydomain.tk
    http:
      paths:
      - backend:
          serviceName: frontend-service
          servicePort: 80
  - host: api.mydomain.tk
    http:
      paths:
      - backend:
          serviceName: backend-service
          servicePort: 3000
